# techbold_track_template

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  REPORT.md  STACK.md  biome.json  debug.sh  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.planning/: MILESTONE-CONTEXT.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
apps/model/: .dockerignore  .env.example  .gitignore  AGENTS.md  DATA_STRATEGY.md  Dockerfile  IMPLEMENTATION_REPORT.md  MODELS.md  MODEL_DEMO.md  Makefile  README.md  compose.yaml  pyproject.toml
apps/model/configs/: gemma4-12b.yaml  ministral3-14b.yaml  mlx-qwen2.5-1.5b.yaml  mlx-qwen2.5-7b.yaml  smoke.yaml
apps/model/data/: README.md  SOURCES.md  source_manifest.example.yaml
apps/model/examples/: eval.jsonl  train.jsonl
apps/model/scripts/: check_artifacts.sh  schema_guard.ts  serve.sh  serve_mlx.sh  verify_ai_sdk_local.sh
apps/model/src/msp_model/: __init__.py  benchmark.py  config.py  evaluate.py  ingest_data.py  prepare_data.py  prepare_mlx_data.py  publish.py  quality.py  rubric.py  train.py
backend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
backend-node/: Dockerfile  package-lock.json  package.json  tsconfig.json
backend-py/: requirements.txt
demo/: README.md  package-lock.json  voiceover-script.md
docs/: AGENT_PIPELINE.md  API.md  ARCHITECTURE.md  AUDIT_LOG.md  DATA_MODEL.md  DEMO_SCRIPT.md  GLOSSARY.md  HARDENING.md  IMPLEMENTATION_PROCEDURE.md  INFRASTRUCTURE.md  (+17 more)
(+654 files in other folders)
